--- a/afat/templates/afat/partials/statistics/corporation/tabs/member.html
+++ b/afat/templates/afat/partials/statistics/corporation/tabs/member.html
@@ -27,41 +27,13 @@
                                             {{ corp }} main characters and their accumulated FATs for {{ month_name }} {{ year }}.
                                         {% endblocktranslate %}
                                     </p>
-                                    {% if main_chars %}
-                                        <table class="table table-striped table-hover w-100" id="corp-main-characters">
-                                            <thead>
-                                                <tr>
-                                                    <th>{% translate "Character" %}</th>
-                                                    <th class="text-end">{% translate "FATs" %}</th>
-                                                    <th><!-- {% translate "Character statistics" %} --></th>
-                                                </tr>
-                                            </thead>
 
-                                            <tbody>
-                                                {% for main_char in main_chars.items %}
-                                                    {% for main in main_char %}
-                                                        {% if main.name %}
-                                                            <tr>
-                                                                <td>{{ main.name }}</td>
-                                                                <td class="text-end">{{ main.fats }}</td>
-                                                                <td class="text-end">
-                                                                    <button
-                                                                        class="btn btn-primary btn-sm btn-afat-corp-stats-view-character"
-                                                                        data-character-name="{{ main.name }}"
-                                                                        data-character-id="{{ main.id }}"
-                                                                        data-year="{{ year }}"
-                                                                        data-month="{{ month }}"
-                                                                        data-url="{% url 'afat:statistics_ajax_get_monthly_fats_for_main_character' main.id year month %}"
-                                                                    >
-                                                                        <i class="fa-solid fa-eye"></i>
-                                                                    </button>
-                                                                </td>
-                                                            </tr>
-                                                        {% endif %}
-                                                    {% endfor %}
-                                                {% endfor %}
-                                            </tbody>
-                                        </table>
+                                    {% if main_chars %}
+                                        {% include "afat/partials/statistics/character/tables/character-fats.html" with id="corp-main-characters" character_data_template="corp-main-characters" characters=main_chars %}
+                                    {% else %}
+                                        <div class="afat-no-data aa-callout aa-callout-info">
+                                            <p>{% translate "This corporation doesn't seem to have any main characters registered." %}</p>
+                                        </div>
                                     {% endif %}
                                 </div>
                             </div>
@@ -88,17 +60,7 @@
                                         <div class="afat-character-alt-characters-table d-none">
                                             <p>{% translate "All characters associated with this main character." %}</p>
 
-                                            <table class="table table-striped table-hover w-100" id="character-alt-characters">
-                                                <thead>
-                                                    <tr>
-                                                        <th>{% translate "Character" %}</th>
-                                                        <th class="text-end">{% translate "FATs" %}</th>
-                                                    </tr>
-                                                </thead>
-
-                                                <tbody>
-                                                </tbody>
-                                            </table>
+                                            {% include "afat/partials/statistics/character/tables/character-fats.html" with id="character-alt-characters" %}
                                         </div>
                                     </div>
                                 </div>
@@ -110,29 +72,7 @@
 
             <div id="tab-fatsallcharacters" class="tab-pane fade card card-default border-0" role="tabpanel" aria-labelledby="tab-fatsallcharacters">
                 <div class="card-body">
-                    <table class="table table-striped table-hover w-100" id="corp-members">
-                        <thead>
-                        <tr>
-                            <th>{% translate "Character" %}</th>
-                            <th>{% translate "FATs" %}</th>
-                            <th><!-- {% translate "Character statistics" %} --></th>
-                        </tr>
-                        </thead>
-
-                        <tbody>
-                        {% for key, value in chars.items %}
-                            <tr>
-                                <td>{{ key }}</td>
-                                <td>{{ value.0 }}</td>
-                                <td class="text-end">
-                                    <a class="btn btn-primary btn-sm" href="{% url 'afat:statistics_character' value.1 year month %}">
-                                        <i class="fa-solid fa-eye"></i>
-                                    </a>
-                                </td>
-                            </tr>
-                        {% endfor %}
-                        </tbody>
-                    </table>
+                    {% include "afat/partials/statistics/character/tables/character-fats.html" with id="corp-members" character_data_template="fats-all-characters" characters=chars %}
                 </div>
             </div>
         </div>
