[CHANGE] Use `django-sri` for sri hashes

--- a/afat/templates/afat/bundles/afat-css.html
+++ b/afat/templates/afat/bundles/afat-css.html
@@ -1,8 +1,3 @@
 {% load afat %}
 
-<link
-    rel="stylesheet"
-    href="{% afat_static 'afat/css/afat.min.css' %}"
-    integrity="sha512-vCb9vEOW9aDVRTiOZpU3OUNl2dHQl5tShh/OPrfy4lVrrIUh9bkDHFqdq82euBB2Ezz8UaYyU0BJVMvp5CBCMQ=="
-    crossorigin="anonymous"
->
+{% afat_static "css/afat.min.css" %}
