--- a/afat/templates/afat/bundles/afat-statistics-js.html
+++ b/afat/templates/afat/bundles/afat-statistics-js.html
@@ -1,7 +1,3 @@
 {% load afat %}
 
-<script
-    src="{% afat_static 'afat/javascript/afat-statistics.min.js' %}"
-    integrity="sha512-2iwu6T7EUYNkqnNWa9SVKJw5PxJ1+tetFwnnrz/aIK8G0wRpXlaHtTG3k/QKMN1d26y+k8aOMPjGT/rl8fYLVg=="
-    crossorigin="anonymous"
-></script>
+{% afat_static "javascript/afat-statistics.min.js" %}
