--- a/afat/templates/afat/bundles/afat-dashboard-js.html
+++ b/afat/templates/afat/bundles/afat-dashboard-js.html
@@ -1,7 +1,3 @@
 {% load afat %}
 
-<script
-    src="{% afat_static 'afat/javascript/afat-dashboard.min.js' %}"
-    integrity="sha512-sa8TGY1U0a8vEgMhwswI0nx2Z2hl/gDXu6zL5u+hmXcyKW/sM1CTVmHl07Xrk308ypVzYtlckP8dVnnwIycujA=="
-    crossorigin="anonymous"
-></script>
+{% afat_static "javascript/afat-dashboard.min.js" %}
