--- a/afat/templates/afat/bundles/afat-datalist-js.html
+++ b/afat/templates/afat/bundles/afat-datalist-js.html
@@ -1,8 +1,3 @@
 {% load afat %}
 
-<script
-    type="module"
-    src="{% afat_static 'afat/javascript/afat-datalist.min.js' %}"
-    integrity="sha512-gUK89zbNSyoIsWQMkctC5ig5XMdc5b43ckHxLx494yB7mGEkwtPvrt6JM8ix5Ab3I4VqZsNZCn6MDkOX0ISPYQ=="
-    crossorigin="anonymous"
-></script>
+{% afat_static "javascript/afat-datalist.min.js" "module" %}
