--- a/afat/templates/afat/bundles/afat-fatlink-details-js.html
+++ b/afat/templates/afat/bundles/afat-fatlink-details-js.html
@@ -1,7 +1,3 @@
 {% load afat %}
 
-<script
-    src="{% afat_static 'afat/javascript/afat-fatlink-details.min.js' %}"
-    integrity="sha512-Q7n6uEfpDJ2Ulqp8xZ9Ks47YPNCs6gujJ9FeOlzxjGmV6Ql11vWWOrJeBSXHDQpzgdoqcudHL+FEmGhUMlac/Q=="
-    crossorigin="anonymous"
-></script>
+{% afat_static "javascript/afat-fatlink-details.min.js" %}
