--- a/afat/templates/afat/bundles/afat-fatlist-js.html
+++ b/afat/templates/afat/bundles/afat-fatlist-js.html
@@ -1,7 +1,3 @@
 {% load afat %}
 
-<script
-    src="{% afat_static 'afat/javascript/afat-fatlist.min.js' %}"
-    integrity="sha512-clTnjAN7j4NNkRd35q6QdkfA8aurMNZfRBWG73ukRMbguCXdKUNPVu1DyhGj/Pvm5O/LdX+HG7ZsNB3BUZEOZQ=="
-    crossorigin="anonymous"
-></script>
+{% afat_static "javascript/afat-fatlist.min.js" %}
