--- a/afat/templates/afat/bundles/afat-js.html
+++ b/afat/templates/afat/bundles/afat-js.html
@@ -1,7 +1,3 @@
 {% load afat %}
 
-<script
-    src="{% afat_static 'afat/javascript/afat.min.js' %}"
-    integrity="sha512-ogpd4OZl6w+qpRnIDZHYAiVsC/PiVofRcKw1zv2/9fhW0Yq8/LpFnC1wow0pJ7YD+ZUlN3sTjA/ZaP/5R3WR7A=="
-    crossorigin="anonymous"
-></script>
+{% afat_static "javascript/afat.min.js" %}
