--- a/afat/templates/afat/bundles/afat-logs-js.html
+++ b/afat/templates/afat/bundles/afat-logs-js.html
@@ -1,7 +1,3 @@
 {% load afat %}
 
-<script
-    src="{% afat_static 'afat/javascript/afat-logs.min.js' %}"
-    integrity="sha512-ub4e+aw1LepXN6a9briLnduDA8JkmFmGsdnNwuWgRu3Pfvf4p8r5gKkXko89IsO8g6FtiABIXMiXLMcXSozgNQ=="
-    crossorigin="anonymous"
-></script>
+{% afat_static "javascript/afat-logs.min.js" %}
