--- a/afat/templates/afat/partials/fatlinks/fatlink-list-legend.html
+++ b/afat/templates/afat/partials/fatlinks/fatlink-list-legend.html
@@ -2,6 +2,6 @@
 
 <p class="fatlink-list-legend my-3 py-3 border-top">
     <b>{% translate "Legend" %}:</b><br>
-    <span class="badge bg-success afat-label">{% translate "ESI" %}</span> » {% translate "Fleet is currently active and FATs are automatically being tracked via ESI" %}<br>
-    <span class="badge bg-secondary afat-label">{% translate "ESI" %}</span> » {% translate "FATs have been automatically tracked via ESI" %}
+    <span class="badge text-bg-success afat-label">{% translate "ESI" %}</span> » {% translate "Fleet is currently active and FATs are automatically being tracked via ESI" %}<br>
+    <span class="badge text-bg-secondary afat-label">{% translate "ESI" %}</span> » {% translate "FATs have been automatically tracked via ESI" %}
 </p>
