--- a/afat/templates/afat/partials/statistics/character/tabs/raw_data.html
+++ b/afat/templates/afat/partials/statistics/character/tabs/raw_data.html
@@ -27,7 +27,7 @@
                             {% endif %}
 
                             {% if fat.fatlink.is_esilink %}
-                                <span class="badge bg-secondary afat-label ms-2">ESI</span>
+                                <span class="badge text-bg-secondary afat-label ms-2">ESI</span>
                             {% endif %}
                         </td>
                         <td>
