--- a/afat/templates/afat/partials/form/fleet-type.html
+++ b/afat/templates/afat/partials/form/fleet-type.html
@@ -1,4 +1,4 @@
-{% if fleet_types_configured and fleet_types|length > 0 %}
+{% if fleet_types|length > 0 %}
     <datalist id="afat-fleet-type-list">
         {% for fleet_type in fleet_types %}
             <option value="{{ fleet_type.name }}">{{ fleet_type.name }}</option>
